dbgate/dbgate-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbgate
  labels:
    app.kubernetes.io/name: dbgate
    app.kubernetes.io/managed-by: kubectl
