dbgate/dbgate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbgate
  namespace: dbgate
  labels:
    app.kubernetes.io/name: dbgate
    app.kubernetes.io/component: management
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: dbgate
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
